--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -28,7 +28,7 @@ collections: # A list of collections the CMS should be able to edit
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
-      - {label: "Description", name: "description", widget: "string" class: "lead"}
+      - {label: "Description", name: "description", widget: "string", class: "lead"}
       - {label: "Menu", name: "menu", widget: "string"}
     meta: # Meta data fields. Just like fields, but without any preview element
       - {label: "Publish Date", name: "date", widget: "datetime"}
