--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,7 +17,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Author", name: "author", widget: "string"}
       - {label: "Episode", name: "episode", widget: "number"}
       - {label: "Soundcloud Embed", name: "soundcloud", widget: "string"}
-      - {label: "Description", name: "description", widget: "markdown", class: "lead"}
+      - {label: "Description", name: "description", widget: "markdown"}
       - {label: "Categories", name: "categories", widget: "string"}
       - {label: "Tags", name: "tags", widget: "string"}
     meta: # Meta data fields. Just like fields, but without any preview element
@@ -28,7 +28,7 @@ collections: # A list of collections the CMS should be able to edit
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
-      - {label: "Description", name: "description", widget: "string", class: "lead"}
+      - {label: "Description", name: "description", widget: "markdown"}
       - {label: "Menu", name: "menu", widget: "string"}
     meta: # Meta data fields. Just like fields, but without any preview element
       - {label: "Publish Date", name: "date", widget: "datetime"}
