--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,7 +18,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Soundcloud Embed", name: "soundcloud", widget: "string"}
       - {label: "Categories", name: "categories", widget: "string"}
       - {label: "Tags", name: "tags", widget: "string"}
-      - {label: "Description", name: "description", widget: "markdown"}      
+      - {label: "Description", name: "description", widget: "markdown"}     
     meta: # Meta data fields. Just like fields, but without any preview element
       - {label: "URL Slug", name: "slug", widget: "string"}
       - {label: "Publish Date", name: "publishdate", widget: "datetime"}
@@ -30,5 +30,6 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
       - {label: "Menu", name: "menu", widget: "string"}
       - {label: "Description", name: "description", widget: "markdown"}
+      - {label: "Body", name: "body", widget: "markdown"} 
     meta: # Meta data fields. Just like fields, but without any preview element
       - {label: "Publish Date", name: "date", widget: "datetime"}
