updated repo information to new github directory

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github-api
-  repo: justrjlewis/tpvsports # Path to your Github repository
+  repo: tpvsports/tpvsports # Path to your Github repository
   branch: master # Branch to update (master by default)
 
 media_folder: "static/uploads" # Folder where user uploaded files should go
