--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,10 +17,10 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Episode", name: "episode", widget: "number"}
       - {label: "Soundcloud Embed", name: "soundcloud", widget: "string"}
       - {label: "Categories", name: "categories", widget: "string"}
-      - {label: "Tags", name: "tags", widget: "string"}
       - {label: "Description", name: "description", widget: "markdown"}     
     meta: # Meta data fields. Just like fields, but without any preview element
-      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Categories", name: "categories", widget: "tags"}
+      - {label: "Tags (seperated by comma)", name: "tags", widget: "tags"}
   - name: "page"
     label: "Menu Page"
     folder: "content" # The path to the folder where the documents are stored
