--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,7 +18,6 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Soundcloud Embed", name: "soundcloud", widget: "string"}
       - {label: "Description", name: "description", widget: "markdown"}     
     meta: # Meta data fields. Just like fields, but without any preview element
-      # - {label: "Categories", name: "categories", widget: "tags"}
       - {label: "Tags (seperated by comma)", name: "tags", widget: "tags"}
   - name: "page"
     label: "Menu Page"
@@ -26,7 +25,7 @@ collections: # A list of collections the CMS should be able to edit
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
-      - {label: "Menu", name: "menu", widget: "string"}
+      - {label: "Menu", name: "menu", widget: "string", optional: false}
       - {label: "Description", name: "description", widget: "markdown"}
       - {label: "Body", name: "body", widget: "markdown"} 
     meta: # Meta data fields. Just like fields, but without any preview element
