--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,6 +18,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Soundcloud Embed", name: "soundcloud", widget: "string"}
       - {label: "Description", name: "description", widget: "markdown"}     
     meta: # Meta data fields. Just like fields, but without any preview element
+      - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Tags (seperated by comma)", name: "tags", widget: "tags"}
   - name: "page"
     label: "Menu Page"
