--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,8 +16,10 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Author", name: "author", widget: "string"}
       - {label: "Episode", name: "episode", widget: "number"}
       - {label: "Soundcloud Embed", name: "soundcloud", widget: "string"}
-      - {label: "Description", name: "description", widget: "markdown"}     
+      - {label: "Description", name: "description", widget: "markdown"}  
+      - {label: "Body (this does not show up on the podcast page)", name: "body", widget: "markdown"}   
     meta: # Meta data fields. Just like fields, but without any preview element
+      - {label: "Slug", name: "cmsUserSlug", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Tags (seperated by comma)", name: "tags", widget: "tags"}
   - name: "page"
@@ -30,4 +32,5 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Description", name: "description", widget: "markdown"}
       - {label: "Body", name: "body", widget: "markdown"} 
     meta: # Meta data fields. Just like fields, but without any preview element
+      - {label: "Slug", name: "cmsUserSlug", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
