--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,6 +19,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Description", name: "description", widget: "markdown"}  
       - {label: "Body (this does not show up on the podcast page)", name: "body", widget: "markdown"}   
     meta: # Meta data fields. Just like fields, but without any preview element
+      - {label: "Slug (episode-title): copy from above, or create your own", name: "slug", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Tags (seperated by comma)", name: "tags", widget: "tags"}
   - name: "page"
