--- a/config.toml
+++ b/config.toml
@@ -34,6 +34,5 @@ soundcloud = ""
 [permalinks]
 podcast = "/:year/:month/:day/:slug"
 [sitemap]
-ChangeFreq = ""
-Filename = "sitemap.xml"
-Priority = "-1"
+changefreq = "monthly"
+priority = "-1"
